Fix z-index issue timerbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,28 +54,31 @@ header {
 /* --------Test Loading Bar */
 
 .timer {
-    position: absolute;
+    background-color: blue;
+    border-radius: 50%;
     width: 100%;
     height: 100%;
     clip: rect(0px, 31rem, 31rem, 15.5rem);
-    border-radius: 100%;
-    background-color: blue;
+    
+    position: absolute;
 }
 
 .loading {
-    position: absolute;
     background-color: white;
+    border-radius: 50%;
     width: 100%;
     height: 100%;
-    border-radius: 50%;
     clip: rect(0px, 31rem, 31rem, 15.5rem);
+
+    position: absolute;
 }
 
-.left .loading {
-    z-index: 4;
+.left .loading { 
     -webkit-animation: left 10s linear;
     -moz-animation: left 10s linear;
     animation: left 10s linear both;
+
+    z-index: 4;
 }
 
 @keyframes left {
@@ -99,6 +102,7 @@ header {
 }
 
 .right {
+    
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     transform: rotate(180deg);
@@ -107,14 +111,13 @@ header {
 }
 
 .right .loading {
-    animation: right 10s linear both;
-    animation-delay: 10s;
-    
     -webkit-animation: right 10s linear;
     -moz-animation: right 10s linear;
+    animation: right 10s linear both;
     
     -webkit-animation-delay: 10s;
     -moz-animation-delay: 10s;
+    animation-delay: 10s;
 
     z-index: 3;
 }
@@ -157,6 +160,8 @@ header {
     background-color: white;
 
     box-shadow: 0 0 1rem 2px;
+
+    z-index: 4;
 }
 
 .tally {
